--- a/src/main/resources/templates/usuario/templateUsuario.html
+++ b/src/main/resources/templates/usuario/templateUsuario.html
@@ -126,7 +126,7 @@
     <header>
         <div class="contenedor-header" th:each="usuario:${usuario}">
             <div class="logo-header">
-                <a th:href="@{/}">
+                <a th:href="@{/usuario/homeNuevoUsuario}">
                     <img class="img-logo-header" th:src="@{/imagenes/logo.png}" alt="logo">
                 </a>
             </div>
