--- a/src/main/resources/templates/usuario/editar.html
+++ b/src/main/resources/templates/usuario/editar.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Header -->
-    <div th:insert="~{usuario/templateUsuario.html::header-user}" th:unless="${sesion==null}"></div>
+    <div th:insert="~{usuario/templateUsuario.html::header-user-sin-rol}" th:unless="${sesion==null}"></div>
 
     <main>
 
@@ -150,7 +150,7 @@
                 </div>
 
                 <div class="col-sm-12 center mrt-30">
-                    <a class="btn btn-secondary mr-30" th:href="@{/}"><img class="w25" th:src="@{/iconos/cancelar.png}"
+                    <a class="btn btn-secondary mr-30" th:href="@{/usuario/homeNuevoUsuario}"><img class="w25" th:src="@{/iconos/cancelar.png}"
                             alt="cancelar"> Cancelar</a>
                     <button type="submit" class="btn btn-dark ml10"><img class="w25" th:src="@{/iconos/guardar.png}"
                             alt="guardar"> Guardar</button>
@@ -162,7 +162,7 @@
     </main>
 
     <!-- Footer -->
-    <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer-user}"></div>
+    <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer-user-sin-rol}"></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
