--- a/src/main/resources/templates/tecnico/templateTecnico.html
+++ b/src/main/resources/templates/tecnico/templateTecnico.html
@@ -60,7 +60,7 @@
 
                             <li class="center">
                                 <div class="card border mrt-5 w90 center">
-                                    <a class="black dos-columnas-menu" th:href="@{/tecnico/cambiarTecnico}">
+                                    <a class="black dos-columnas-menu" th:href="@{/tecnico/cambiarContrasena}">
                                         <div class="center">
                                             <img class="w20" th:src="@{/iconos/contrasena.png}" alt="usuario">
                                         </div>
