--- a/src/main/resources/templates/tecnico/templateTecnico.html
+++ b/src/main/resources/templates/tecnico/templateTecnico.html
@@ -8,15 +8,15 @@
                 </a>
             </div>
             <div class="menu-header">
-                <a class="link-a" th:href="@{/tecnico/clientes}"><img class="icono-header"
+                <a class="link-a" th:href="@{/recepcion/clientes}"><img class="icono-header"
                         th:src="@{/iconos/grupo5.png}" alt="clientes-blanco">
                     <p>Clientes</p>
                 </a>
-                <a class="link-a" th:href="@{/tecnico/equipos}"><img class="icono-header" th:src="@{/iconos/equipos.png}"
+                <a class="link-a" th:href="@{/equipo/equipos}"><img class="icono-header" th:src="@{/iconos/equipos.png}"
                         alt="equipos">
                     <p>Equipos</p>
                 </a>
-                <a class="link-a" th:href="@{/tecnico/ordenes}"><img class="icono-header"
+                <a class="link-a" th:href="@{/orden/ordenes}"><img class="icono-header"
                         th:src="@{/iconos/reparaciones.png}" alt="reparacion">
                     <p>Ordenes</p>
                 </a>
