--- a/src/main/resources/templates/clientes/alta.html
+++ b/src/main/resources/templates/clientes/alta.html
@@ -15,7 +15,9 @@
 <body>
 
     <!-- Header -->
-    <div th:insert="~{recepcion/templateRecepcion.html::header-recepcion}" th:unless="${sesion==null}"></div>
+    <div th:insert="~{recepcion/templateRecepcion.html::header-recepcion}" th:if="${sesion != null and usuario.rol == 'RECEPCIONISTA'}"></div>
+
+    <div th:insert="~{tecnico/templateTecnico.html::header-tecnico}" th:if="${sesion != null and usuario.rol == 'TECNICO'}"></div>
 
 
     <!-- Main -->
@@ -188,8 +190,10 @@
 
 
     <!-- Footer -->
-    <div class="mrt-30" th:insert="~{recepcion/templateRecepcion.html::footer-recepcion}"></div>
+    <div class="mrt-30" th:insert="~{recepcion/templateRecepcion.html::footer-recepcion}" th:if="${sesion != null and usuario.rol == 'RECEPCIONISTA'}"></div>
 
+    <div class="mrt-30" th:insert="~{tecnico/templateTecnico.html::footer-tecnico}" th:if="${sesion != null and usuario.rol == 'TECNICO'}"></div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
