--- a/src/main/resources/templates/clientes/mostrar.html
+++ b/src/main/resources/templates/clientes/mostrar.html
@@ -118,7 +118,9 @@
     </main>
 
     <!-- Footer -->
-    <div class="mrt-30" th:insert="~{recepcion/templateRecepcion.html::footer-recepcion}"></div>
+    <div class="mrt-30" th:insert="~{recepcion/templateRecepcion.html::footer-recepcion}" th:if="${sesion != null and usuario.rol == 'RECEPCIONISTA'}"></div>
+
+    <div class="mrt-30" th:insert="~{tecnico/templateTecnico.html::footer-tecnico}" th:if="${sesion != null and usuario.rol == 'TECNICO'}"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
