--- a/src/main/resources/templates/orden/detalleOrden.html
+++ b/src/main/resources/templates/orden/detalleOrden.html
@@ -20,8 +20,11 @@
 <body>
 
     <!-- Header -->
-    <div class="dontPrint" th:insert="~{recepcion/templateRecepcion.html::header-recepcion}" th:unless="${sesion==null}"></div>
+    <div class="dontPrint" th:insert="~{recepcion/templateRecepcion.html::header-recepcion}"
+        th:if="${sesion != null and usuario.rol == 'RECEPCIONISTA'}"></div>
 
+    <div class="dontPrint" th:insert="~{tecnico/templateTecnico.html::header-tecnico}"
+        th:if="${sesion != null and usuario.rol == 'TECNICO'}"></div>
     <!-- Main -->
     <main>
 
@@ -76,7 +79,9 @@
                                 </h6>
                             </div>
                             <hr>
-                            <h5 class="card-title black" th:text="'Equipo: ' + ${orden.equipo.tipoEquipo + ' ' + orden.equipo.marca + ' ' + orden.equipo.modelo}"></h5>
+                            <h5 class="card-title black"
+                                th:text="'Equipo: ' + ${orden.equipo.tipoEquipo + ' ' + orden.equipo.marca + ' ' + orden.equipo.modelo}">
+                            </h5>
                             <hr>
                             <table class="table">
                                 <thead>
@@ -105,7 +110,7 @@
                     <div class="col-lg-12 ml-10 mr-10">
                         <ul class="list-group" style="border: solid 1px rgb(199, 198, 198);">
                             <li class="list-group-item spac-betw">
-                                <h5 class="card-title">IVA  21%:</h5>
+                                <h5 class="card-title">IVA 21%:</h5>
                                 <h5 th:text="'$' + ${orden.iva}"></h5>
                             </li>
                             <li class="list-group-item spac-betw">
@@ -131,7 +136,11 @@
 
 
     <!-- Footer -->
-    <div class="dontPrint mrt-30" th:insert="~{recepcion/templateRecepcion.html::footer-recepcion}"></div>
+    <div class="dontPrint mrt-30" th:insert="~{recepcion/templateRecepcion.html::footer-recepcion}"
+        th:if="${sesion != null and usuario.rol == 'RECEPCIONISTA'}"></div>
+
+    <div class="dontPrint mrt-30" th:insert="~{tecnico/templateTecnico.html::footer-tecnico}"
+        th:if="${sesion != null and usuario.rol == 'TECNICO'}"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
