--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -845,3 +845,14 @@ a {
     width: 150px;
 }
 
+/* Usuario Bloqueado */
+
+.bloqueado {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: 400px;
+    border: solid 2px #fff;
+    border-radius: 5px;
+}
