--- a/src/main/resources/templates/administrador/cambiarRol.html
+++ b/src/main/resources/templates/administrador/cambiarRol.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Header -->
-    <div th:insert="~{usuario/templateUsuario.html::header-admin}" th:unless="${sesion==null}"></div>
+    <div th:insert="~{administrador/templateAdmin.html::header-admin}" th:unless="${sesion==null}"></div>
 
     <main>
 
@@ -162,6 +162,7 @@
                                 <option value="RECEPCIONISTA">RECEPCIONISTA</option>
                                 <option value="TECNICO">TÉCNICO</option>
                                 <option value="USER">USUARIO</option>
+                                <option value="BLOQUEADO">BLOQUEADO</option>
                             </select>
                         </div>
                     </div>
@@ -180,7 +181,7 @@
     </main>
 
     <!-- Footer -->
-    <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer-admin}"></div>
+    <div class="mrt-30" th:insert="~{administrador/templateAdmin.html::footer-admin}"></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
