--- a/src/main/resources/templates/administrador/homeAdmin.html
+++ b/src/main/resources/templates/administrador/homeAdmin.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Header -->
-    <div th:insert="~{usuario/templateUsuario.html::header-admin}" th:unless="${sesion==null}"></div>
+    <div th:insert="~{administrador/templateAdmin.html::header-admin}" th:unless="${sesion==null}"></div>
 
     <!-- Main -->
     <main>
@@ -67,7 +67,7 @@
 
 
     <!-- Footer -->
-    <div th:insert="~{usuario/templateUsuario.html::footer-admin}"></div>
+    <div class="mrt-30" th:insert="~{administrador/templateAdmin.html::footer-admin}"></div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
