--- a/src/main/resources/templates/clientes/alta.html
+++ b/src/main/resources/templates/clientes/alta.html
@@ -16,9 +16,8 @@
 
     <!-- Header -->
     <div th:insert="~{recepcion/templateRecepcion.html::header-recepcion}" th:if="${sesion != null and usuario.rol == 'RECEPCIONISTA'}"></div>
-
     <div th:insert="~{tecnico/templateTecnico.html::header-tecnico}" th:if="${sesion != null and usuario.rol == 'TECNICO'}"></div>
-
+    <div th:insert="~{administrador/templateAdmin.html::header-admin}" th:if="${sesion != null and usuario.rol == 'ADMIN'}"></div>
 
     <!-- Main -->
     <main>
@@ -176,7 +175,7 @@
                 </div>
 
                 <div class="col-sm-12 center mrt-30">
-                    <a class="btn btn-secondary mr-30" th:href="@{/recepcion/homeRecepcion}"><img class="w25"
+                    <a class="btn btn-secondary mr-30" th:href="@{/recepcion/clientes}"><img class="w25"
                             th:src="@{/iconos/cancelar.png}" alt="cancelar"> Cancelar</a>
                     <button type="submit" class="btn btn-dark ml10"><img class="w25" th:src="@{/iconos/guardar.png}"
                             alt="guardar"> Guardar</button>
@@ -191,9 +190,9 @@
 
     <!-- Footer -->
     <div class="mrt-30" th:insert="~{recepcion/templateRecepcion.html::footer-recepcion}" th:if="${sesion != null and usuario.rol == 'RECEPCIONISTA'}"></div>
-
     <div class="mrt-30" th:insert="~{tecnico/templateTecnico.html::footer-tecnico}" th:if="${sesion != null and usuario.rol == 'TECNICO'}"></div>
-    
+    <div class="mrt-30" th:insert="~{administrador/templateAdmin.html::footer-admin}" th:if="${sesion != null and usuario.rol == 'ADMIN'}"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
