--- a/src/main/resources/templates/usuario/templateUsuario.html
+++ b/src/main/resources/templates/usuario/templateUsuario.html
@@ -22,6 +22,20 @@
     </header>
 </div>
 
+<div th:fragment="header-bloqueado">
+    <header>
+        <div class="contenedor-header">
+            <div class="logo-header">
+                <a th:href="@{/usuario/bloqueado}">
+                    <img class="img-logo-header" th:src="@{/imagenes/logo.png}" alt="logo">
+                </a>
+            </div>
+            <div class="menu-header">
+                
+            </div>
+        </div>
+    </header>
+</div>
 
 <!-- Header Usuario con logeo y Rol asignado -->
 <div th:fragment="header-user">
@@ -203,123 +217,6 @@
     </header>
 </div>
 
-
-<!-- Header Administrador-->
-<div th:fragment="header-admin">
-    <header>
-        <div class="contenedor-header" th:each="usuario:${usuario}">
-            <div class="logo-header">
-                <a class="link-a" th:href="@{/administrador/homeAdmin}">
-                    <img class="img-logo-header" th:src="@{/imagenes/logo.png}" alt="logo">
-                </a>
-            </div>
-            <div class="menu-header">
-                <a class="link-a" th:href="@{/administrador/clientes}"><img class="icono-header" th:src="@{/iconos/grupo5.png}"
-                    alt="clientes">
-                <p>Clientes</p>
-            </a>
-                <a class="link-a" th:href="@{/administrador/equipos}"><img class="icono-header" th:src="@{/iconos/equipos.png}"
-                        alt="equipos">
-                    <p>Equipos</p>
-                </a>
-                <a class="link-a" th:href="@{/administrador/ordenes}"><img class="icono-header" th:src="@{/iconos/reparaciones.png}"
-                    alt="ordenes">
-                <p>Ordenes</p>
-            </a>
-                <a class="link-a" th:href="@{/administrador/tecnicos}"><img class="icono-header" th:src="@{/iconos/soporte-it.png}"
-                        alt="soporte-it">
-                    <p>Técnicos</p>
-                </a>
-                <a class="link-a" th:href="@{/administrador/usuarios}"><img class="icono-header" th:src="@{/iconos/grupo3.png}"
-                        alt="usuarios">
-                    <p>Usuarios</p>
-                </a>
-                <!-- Usuario con dropdown -->
-                <div class="usersession mrt-5">
-                    <div class="dropdown">
-
-                        <div class="width-ico" type="button" data-bs-toggle="dropdown" aria-expanded="true">
-                            <div class="center w70">
-                                <img class="circle" th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
-                            </div>
-                            <p class="user-name" th:text="${usuario.nombreUsuario}"></p>
-                        </div>
-
-                        <ul class="dropdown-menu w220">
-
-                            <li class="center">
-                                <div class="card mrt-10 mrb-10 w90 center">
-                                    <div class="contenedor-user-name w100">
-                                        <h5 class="white" th:text="${usuario.nombreUsuario}"></h5>
-                                    </div>
-                                    <img class="circle mrt-10" style="width: 70px; height: 70px;"
-                                        th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
-                                    <h4 th:text="${usuario.nombre + ' ' + usuario.apellido}"></h4>
-                                    <p th:text="${usuario.email}"></p>
-                                </div>
-                            </li>
-
-                            <li class="center">
-                                <div class="card border mrt-5 w90 center">
-                                    <a class="black dos-columnas-menu" th:href="@{/administrador/editarAdmin}">
-                                        <div class="center">
-                                            <img class="w20" th:src="@{/iconos/sobre-nosotros-negro.png}" alt="usuario">
-                                        </div>
-                                        <div class=" mrt-10">
-                                            <p class="tf-14">Editar Perfil</p>
-                                        </div>
-                                    </a>
-                                </div>
-                            </li>
-
-                            <li class="center">
-                                <div class="card border mrt-5 w90 center">
-                                    <a class="black dos-columnas-menu" th:href="@{/administrador/cambiarContrasena}">
-                                        <div class="center">
-                                            <img class="w20" th:src="@{/iconos/contrasena.png}" alt="usuario">
-                                        </div>
-                                        <div class="mrt-10">
-                                            <p class="tf-14">Cambiar Contraseña</p>
-                                        </div>
-                                    </a>
-                                </div>
-                            </li>
-
-                            <li class="center">
-                                <div class="card border mrt-5 w90 center">
-                                    <a class="black dos-columnas-menu" th:href="@{/administrador/usuarios}">
-                                        <div class="center">
-                                            <img class="w20" th:src="@{/iconos/sobre-nosotros-negro.png}" alt="usuario">
-                                        </div>
-                                        <div class="mrt-10">
-                                            <p class="tf-14">Usuarios</p>
-                                        </div>
-                                    </a>
-                                </div>
-                            </li>
-
-                            <li class="center">
-                                <div class="card border mrt-5 w90 center">
-                                    <a class="black dos-columnas-menu" th:href="@{/usuario/cerrar}">
-                                        <div class="center">
-                                            <img class="w20" th:src="@{/iconos/btn_power.png}" alt="salir">
-                                        </div>
-                                        <div class="mrt-10">
-                                            <p class="tf-14">Cerrar Sesión</p>
-                                        </div>
-                                    </a>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- Fin Usuario con dropdown -->
-            </div>
-        </div>
-    </header>
-</div>
-
-
 <!-- Header link -->
 <div th:fragment="header-link">
     <header>
@@ -343,131 +240,6 @@
     </header>
 </div>
 
-
-
-
-<!-- Header Usuario Recepcionista-->
-<div th:fragment="header-recepcion">
-    <header>
-        <div class="contenedor-header" th:each="usuario:${usuario}">
-            <div class="logo-header">
-                <a th:href="@{/recepcion/homeRecepcionista}">
-                    <img class="img-logo-header" th:src="@{/imagenes/logo.png}" alt="logo">
-                </a>
-            </div>
-            <div class="menu-header">
-                <a th:href="@{/usuario/equipos}"><img class="icono-header" th:src="@{/iconos/equipos.png}"
-                        alt="equipos">
-                    Agregar Cliente
-                </a>
-                <a th:href="@{/usuario/reparaciones}"><img class="icono-header" th:src="@{/iconos/reparacion.png}"
-                        alt="reparacion">
-                    Clientes
-                </a>
-                <a th:href="@{/usuario/compras}"><img class="icono-header" th:src="@{/iconos/compras.png}"
-                        alt="compras">
-                    Agregar Equipo
-                </a>
-                <a th:href="@{/usuario/Perfil}"><img class="icono-header" th:src="@{/iconos/perfil.png}" alt="perfil">
-                    Reparaciones
-                </a>
-                <!-- Usuario con dropdown -->
-                <div class="usersession">
-                    <div class="dropdown">
-
-                        <div class="width-ico mr30" type="button" data-bs-toggle="dropdown" aria-expanded="true">
-                            <div class="center w70">
-                                <img class="circle" th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
-                            </div>
-                            <p class="user-name mrt-5" th:text="${usuario.nombreUsuario}"></p>
-                        </div>
-
-                        <ul class="dropdown-menu w220">
-
-                            <li class="center">
-                                <div class="card mrt-10 mrb-10 w90 center">
-                                    <div class="contenedor-user-name w100">
-                                        <h5 class="white" th:text="${usuario.nombreUsuario}"></h5>
-                                    </div>
-                                    <img class="circle mrt-10" style="width: 70px; height: 70px;"
-                                        th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
-                                    <h4 th:text="${usuario.nombre + ' ' + usuario.apellido}"></h4>
-                                    <p th:text="${usuario.email}"></p>
-                                </div>
-                            </li>
-
-                            <li class="center">
-                                <div class="card border mrt-5 w90 center">
-                                    <a class="black" th:href="@{/usuario/editar}">
-                                        <div class="dos-columnas">
-                                            <div>
-                                                <img class="w20" th:src="@{/iconos/sobre-nosotros-negro.png}"
-                                                    alt="usuario">
-                                            </div>
-                                            <div class="w-150 mrt-10">
-                                                <p>Editar Perfil</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </li>
-
-                            <li class="center">
-                                <div class="card border mrt-5 w90 center">
-                                    <a class="black" th:href="@{/usuario/cambiarContrasena}">
-                                        <div class="dos-columnas">
-                                            <div>
-                                                <img class="w20" th:src="@{/iconos/contrasena.png}" alt="usuario">
-                                            </div>
-                                            <div class="w-150 mrt-10">
-                                                <p>Cambiar Contraseña</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </li>
-                            <li class="center">
-                                <div class="card border mrt-5 w90 center">
-                                    <a th:href="@{/usuario/compras}">
-                                        <div class="dos-columnas">
-                                            <div>
-                                                <img class="w20" th:src="@{/iconos/mis-compras.png}" alt="compras">
-                                            </div>
-                                            <div class="w-150 mrt-10">
-                                                <p>Mis Compras</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </li>
-                            <li class="center">
-                                <div class="card border mrt-5 w90 center">
-                                    <a class="black" th:href="@{/usuario/cerrar}">
-
-                                        <div class="dos-columnas">
-                                            <div>
-                                                <img class="w20" style="width: 20px; height: 20px;"
-                                                    th:src="@{/iconos/btn_power.png}" alt="salir">
-                                            </div>
-                                            <div class="w-150 mrt-10">
-                                                <p>Cerrar Sesión</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- Fin Usuario con dropdown -->
-            </div>
-        </div>
-    </header>
-</div>
-
-
-
-
 <!-- Footer Usuario-->
 <div th:fragment="footer-user">
     <footer>
@@ -484,47 +256,28 @@
     </footer>
 </div>
 
+<!-- Footer Usuario-->
+<div th:fragment="footer-bloqueado">
+    <footer>
+        <div class="contenedor-footer">
+            <div class="logo-footer">
+                <a th:href="@{/usuario/bloqueado}">
+                    <img class="img-logo-header" th:src="@{/imagenes/logo.png}" alt="logo">
+                </a>
+            </div>
+            <div class="texto-footer">
+                <p>Developers 2026 - All Right Reserved</p>
+            </div>
+        </div>
+    </footer>
+</div>
+
 <!-- Footer Usuario sin Rol-->
 <div th:fragment="footer-user-sin-rol">
     <footer>
         <div class="contenedor-footer">
             <div class="logo-footer">
                 <a th:href="@{/usuario/homeNuevoUsuario}">
-                    <img class="img-logo-header" th:src="@{/imagenes/logo.png}" alt="logo">
-                </a>
-            </div>
-            <div class="texto-footer">
-                <p>Developers 2026 - All Right Reserved</p>
-            </div>
-        </div>
-    </footer>
-</div>
-
-<!-- Footer Administrador-->
-
-<div th:fragment="footer-admin">
-    <footer>
-        <div class="contenedor-footer">
-            <div class="logo-footer">
-                <a th:href="@{/administrador/homeAdmin}">
-                    <img class="img-logo-header" th:src="@{/imagenes/logo.png}" alt="logo">
-                </a>
-            </div>
-            <div class="texto-footer">
-                <p>Developers 2026 - All Right Reserved</p>
-            </div>
-        </div>
-    </footer>
-</div>
-
-
-
-<!-- Footer Recepcion-->
-<div th:fragment="footer-recepcion">
-    <footer>
-        <div class="contenedor-footer">
-            <div class="logo-footer">
-                <a th:href="@{/recepcion/homeRecepcion}">
                     <img class="img-logo-header" th:src="@{/imagenes/logo.png}" alt="logo">
                 </a>
             </div>
