--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -314,6 +314,11 @@ a {
     justify-content: space-between;
 }
 
+.spac-around {
+    display: flex;
+    justify-content: space-around;
+}
+
 /* Estilos Registro */
 
 .formulario {
@@ -855,4 +860,13 @@ a {
     height: 400px;
     border: solid 2px #fff;
     border-radius: 5px;
+}
+
+/* Dashboard */
+
+.contenedor-dashboard {
+    display: grid;
+    grid-template-columns: 10% 70% 20%;
+    width: 100%;
+    gap: 10px;
 }
