Mejoras en panel rececion

--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -830,6 +830,11 @@ a {
     height: 250px;
 }
 
+.contenedor-tarjeta-estirada {
+    width: 350px;
+    height: 200px;
+}
+
 .black {
     color: #000;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
