--- a/src/main/resources/templates/recepcion/homeRecepcion.html
+++ b/src/main/resources/templates/recepcion/homeRecepcion.html
@@ -152,7 +152,7 @@
                             <div class="card border mr15">
                                 <br>
                                 <h3 class="center">Ordenes Pendientes</h3>
-                                <h1 class="center">8</h1>
+                                <h1 class="center" th:text="${ordenConteo.get('PENDIENTE')}"></h1>
                             </div>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                             <div class="card border mr15">
                                 <br>
                                 <h3 class="center">Ordenes en Curso</h3>
-                                <h1 class="center">1</h1>
+                                <h1 class="center"  th:text="${ordenConteo.get('EN_CURSO')}">1</h1>
                             </div>
                         </div>
                     </div>
