Agrego perfil recepcion

--- a/src/main/resources/templates/recepcion/homeRecepcion.html
+++ b/src/main/resources/templates/recepcion/homeRecepcion.html
@@ -187,10 +187,10 @@
                     <!-- Grupo: Alta Cliente -->
                     <div class="contenedor-tarjeta">
                         <div class="card border mr30">
-                            <a th:href="@{/recepcion/altaCliente}">
+                            <a th:href="@{/recepcion/perfilRecepcion}">
                                 <div class="card border mr15">
-                                    <img class="img-card mr30" src="/iconos/agregar-cliente.png" alt="agregar-usuario">
-                                    <h5 class="center black">Alta Cliente</h5>
+                                    <img class="img-card mr30" src="/iconos/usuario.png" alt="usuario">
+                                    <h5 class="center black">Ver Perfil</h5>
                                 </div>
                             </a>
                         </div>
