--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -260,6 +260,9 @@ body {
 
 
 /* Estilos Generales */
+.left {
+    text-align: left;
+}
 
 .mrt-30 {
     margin-top: 30px;
@@ -308,6 +311,18 @@ a {
 
 .ml30 {
     margin-left: 30px;
+}
+
+.ml5 {
+    margin-left: 5px;
+}
+
+.mr5 {
+    margin-right: 5px;
+}
+
+.w-500 {
+    width: 500px;
 }
 
 .spac-betw {
